fixed syling issues on ios/safari + small tweaks

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -1,7 +1,3 @@
-body {
-  background-color: #f0f7f1 !important;
-}
-
 .nav-link {
   /* background-color: #212529 !important; */
   color: #212529 !important;
